Added the workoutplan_exercises table that connects exercises with a workout plan