@@ -1,31 +1,36 @@
 package com.fontys.fitquest.business.implementation;
 
 import com.fontys.fitquest.business.GetUsersUseCase;
+import com.fontys.fitquest.domain.User;
 import com.fontys.fitquest.domain.requests.GetAllUsersRequest;
 import com.fontys.fitquest.domain.responses.GetAllUsersResponse;
-import com.fontys.fitquest.domain.User;
 import com.fontys.fitquest.persistence.UserRepository;
 import com.fontys.fitquest.persistence.entity.UserEntity;
 import lombok.AllArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @AllArgsConstructor
 public class GetUsersUseCaseImpl implements GetUsersUseCase {
-    private UserRepository userRepository;
+    private final UserRepository userRepository;
 
     @Override
-        public GetAllUsersResponse getUsers(final GetAllUsersRequest request){
+    public GetAllUsersResponse getUsers(final GetAllUsersRequest request) {
         List<UserEntity> results;
+        if (request.getRole() != null) {
+            results = userRepository.findByRole(request.getRole());
+        } else {
             results = userRepository.findAll();
+        }
 
-        final GetAllUsersResponse response = new GetAllUsersResponse();
-        List<User> users = results
-                .stream()
+        List<User> users = results.stream()
                 .map(UserConverter::convert)
-                .toList();
+                .collect(Collectors.toList());
+
+        GetAllUsersResponse response = new GetAllUsersResponse();
         response.setUsers(users);
 
         return response;
